# audiowmark

./: .gitignore  CMakeLists.txt  CMakeLists_wasm_simple.txt  LIBRARY_README.md  README.md  README_webapp.md  build_real_wasm.sh  build_simple_wasm.sh  build_wasm.sh  config.h.in  test_compatibility  test_compatibility.cc
.github/workflows/: testing.yml
build_wasm/: CMakeCache.txt  CMakeLists.txt
cmake/: utils.cmake
examples/: realtime_example.cc
include/: audiowmark_realtime.h
misc/: build-cmake.sh  macbuild-cmake.sh
src/: audiostream.cc  audiowmark.cc  audiowmark_realtime.cc  audiowmark_wasm.cc  audiowmark_wasm_simple.cc  fft.cc  fft.hh  fft_wasm.cc  hls.cc  limiter.hh  mp3inputstream.cc  mpegts.cc  random.hh  rawinputstream.cc  rawoutputstream.cc  resample.cc  sfinputstream.cc  testhls.cc  testlimiter.cc  testmp3.cc  testmpegts.cc  testrandom.cc  testshortcode.cc  testthreadpool.cc  utils.cc  wavdata.cc  wmadd.cc
wasm/: README.md  audiowmark.js  audiowmark.wasm  audiowmark_app.js  audiowmark_simple_app.js  diagnostic.html  index.html  test.html  test_wasm.js  watermark-receiver-processor.js  watermark-sender-processor.js
